tests/invalid_inputs/sema/int_ptr_minus_void_ptr.cpp
// test that void pointer cannot be subtracted from int pointer

void f() {
	int *i;
	void *v;
	i - v;
}
